--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="select_language">选择编程语言</string>
     <string name="search_hint">输入搜索关键词</string>
     <string name="search">搜索</string>
+    <string name="recently_popular_repos">近七日最火Repo</string>
 </resources>
